@@ -1,0 +1,42 @@
+language: python
+sudo: false
+cache:
+  pip: true
+  directories:
+  - eggs
+  - downloads
+matrix:
+  include:
+    - python: 2.7
+      env: PLONE_VERSION=4.3.x
+    - python: 2.7
+      env: PLONE_VERSION=5.0.x
+    - python: 2.7
+      env: PLONE_VERSION=5.1.x
+    - python: 2.7
+      env: PLONE_VERSION=5.2.x
+    - python: 3.6
+      env: PLONE_VERSION=5.2.x
+    - python: 3.7
+      env: PLONE_VERSION=5.2.x
+before_install:
+  - mkdir -p buildout-cache/downloads
+  - mkdir -p buildout-cache/eggs
+install:
+  - pip install -r requirements-$PLONE_VERSION.txt
+  - buildout -Nc plone-$PLONE_VERSION.cfg
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+script:
+  - bin/code-analysis
+  - bin/test
+after_success:
+  - bin/coverage.sh
+  - pip install coveralls
+  - coveralls
+after_failure:
+  - bin/csslint --version
+  - bin/jshint --version
+  - bin/jscs --version
+  - firefox -v
