@@ -1,0 +1,13 @@
+[buildout]
+extends =
+    https://raw.githubusercontent.com/collective/buildout.plonetest/master/test-5.2.x.cfg
+    https://raw.github.com/collective/buildout.plonetest/master/qa.cfg
+package-name = collective.purgebyid
+package-extras = [test]
+plone-series = 5.2
+parts +=
+    code-analysis
+    coverage-sh
+    code-analysis
+    createcoverage
+
