@@ -1,0 +1,1 @@
+-r http://dist.plone.org/release/5.2-latest/requirements.txt
