@@ -2,6 +2,7 @@
     xmlns="http://namespaces.zope.org/zope"
     xmlns:five="http://namespaces.zope.org/five"
     xmlns:i18n="http://namespaces.zope.org/i18n"
+    xmlns:zcml="http://namespaces.zope.org/zcml"
     xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
     i18n_domain="collective.purgebyid">
 
@@ -13,7 +14,7 @@
 
   <adapter factory=".adapter.contentAdapter" />
   <adapter factory=".adapter.resourceDirectoryAdapter" />
-  <adapter factory=".adapter.resourceRegistryAdapter" />
+  <adapter zcml:condition="installed Products.ResourceRegistry" factory=".adapter.resourceRegistryAdapter" />
 
   <!-- Mutator: plone.transformchain order 11000 -->
   <adapter factory=".events.MutatorTransform" name="collective.purgebyid.mutator" />
