@@ -4,7 +4,8 @@ Changelog
 1.1.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Python 3 support 
+  [mamico]
 
 
 1.1.0 (2018-05-14)
